Page MenuHome GnuPG

May chose a signing key from a not inserted card over an inserted one
Open, NormalPublic

Description

When multiple signing keys are present GnuPG may choose a subkey stored on a card not currently inserted over a subkey stored on a card currently inserted because it was created later.
There is code that tries to prefer a subkeys stored on an inserted card, but it only works properly if the subkey for the inserted card is listed later than the "newer" subkey for the card.

Details

Version
2.4.3

Event Timeline

werner triaged this task as Normal priority.Tue, Nov 21, 10:32 AM
werner added projects: gnupg24, patch, OpenPGP.